<resources>
    <!-- Java files -->
    <string name="app_name">TutorApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_student_maps">Map</string>
    <string name="emailError">Email is required!</string>
    <string name="emailCheck">Please enter a valid email!</string>
    <string name="passwordError">Password is required!</string>
    <string name="passwordLength">Minimum password length is 6 characters!</string>
    <string name="passwordConfirm">You need to confirm your password!</string>
    <string name="passwordMatch">Your passwords do not match! Please recheck!</string>
    <string name="usernameError">Username is required!</string>
    <string name="emailValid">Please provide a correct email address!</string>
    <string name="nameError">Full name is required!</string>
    <string name="ageError">Age is required!</string>
    <string name="addressError">Address is required!</string>
    <string name="subjectError">Subject field is required!</string>
    <string name="salaryError">Salary is required!</string>
    <string name="experienceError">Experience is required!</string>
    <string name="phoneError">Phone number is required!</string>
    <string name="locationError">Location is required!</string>

    <!-- activity_main -->
    <string name="login">Login</string>
    <string name="signupLink">Don\'t have an account? Sign up here.</string>
    <string name="resetPassword">Forgot Your Password? Reset Here.</string>

    <!--activity_main_sign_up -->
    <string name="radioButtonTeacher">Tutor</string>
    <string name="radioButtonStudent">Student</string>
    <string name="signUpButton">Sign Up</string>
    <string name="loginLink">Already have an account? Login here.</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="passwordEditText">Password</string>
    <string name="emailET">Email Address</string>
    <string name="usernameETSU">Username</string>

    <!-- activity_privacy_policy-->
    <string name="changesToPPContent">I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. This policy is effective as of 2020-10-13.</string>
    <string name="privacyPolicyTextView">Privacy Policy:</string>
    <string name="ppContent">MHK built the TutorApp app as a Free app. This SERVICE is provided by MHK at no cost and is intended for use as is.\n This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service. If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.\n The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at TutorApp unless otherwise defined in this Privacy Policy.</string>
    <string name="security">Security:</string>
    <string name="securityContent">I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</string>
    <string name="changesToPP">Changes to This Privacy Policy:</string>
    <string name="contactUs">Contact Us:</string>
    <string name="contactUsConten">If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact us at mhk@gmail.com .</string>

    <!--activity_maps -->
    <string name="chooseLocation">Choose Location</string>

    <!--activity_reset_password -->
    <string name="resetPassText">Reset Your Password Here</string>
    <string name="resetPassEmailET">Enter Your Email</string>
    <string name="resetPasswordButton">Reset Password</string>

    <!--activity_splash_screen -->
    <string name="welcome">Welcome!</string>

    <!--activity_teacher_form -->
    <string name="formTextView">Fill out the following form with your info:</string>
    <string name="teacherName">Full Name</string>
    <string name="teacherEmail">Email</string>
    <string name="teacherAge">Age</string>
    <string name="teacherAddress">Address</string>
    <string name="teacherSubjects">Subjects You Teach</string>
    <string name="teacherSalary">Salary in USD</string>
    <string name="teacherExperience">Your Experience in brief</string>
    <string name="teacherPhoneNum">Phone Number</string>
    <string name="uploadImageTextView">Click on the icon below to upload your photo:</string>
    <string name="teacherPhotoImageView">Upload Your Photo Here</string>
    <string name="chooseLocationTextView">Select your location:</string>
    <string name="yourChosenLocation">Your Location</string>
    <string name="goToMapButton">Go to map!</string>
    <string name="submitTutorInfoBtn">Submit Form</string>

    <!--activity_teacher_info -->
    <string name="teacherNameETMultiLine">Name</string>
    <string name="teacherAddressETMultiLine">Address</string>
    <string name="teacherSubjectsETMultiLine">Subjects</string>
    <string name="teacherExperienceETMultiLine">Experience</string>
    <string name="teacherEmail11">Email</string>
    <string name="teacherPhone11">Phone</string>
    <string name="editTextSalaryNumberSigned">Salary in USD</string>
    <string name="ratingTextView">Rate Your Teacher:</string>
    <string name="profilePic">Profile Picture:</string>
    <string name="location">Location:</string>
    <string name="getTeacherLocationBtn">Show Location On Map</string>

    <!--activity_terms_and_conditions -->
    <string name="termsCondsTextView"><![CDATA[Terms & Conditions:]]></string>
    <string name="termsCondsTVContent">By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to MHK.\n\n MHK is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for. The TutorApp app stores and processes personal data that you have provided to us, in order to provide my Service. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the TutorApp app won’t work properly or at all.\n\n You should be aware that there are certain things that MHK will not take responsibility for. Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but MHK cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.\n\n If you’re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app.\n\n Along the same lines, MHK cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to avail the Service, MHK cannot accept responsibility.\n\n With respect to MHK’s responsibility for your use of the app, when you’re using the app, it’s important to bear in mind that although we endeavour to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. MHK accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app.\n\n At some point, we may wish to update the app. The app is currently available on Android – the requirements for system(and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. MHK does not promise that it will always update the app so that it is relevant to you and/or works with the Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.</string>
    <string name="termsChangesTV">Changes to This Terms and Conditions:</string>
    <string name="termsChangesTVContent">I may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Terms and Conditions on this page. These terms and conditions are effective as of 2020-10-13.</string>
    <string name="contactUsTCTV">Contact Us:</string>
    <string name="contactUsTCTVContent">If you have any questions or suggestions about my Terms and Conditions, do not hesitate to contact me at mhk@gmail.com.</string>

    <!--list_item -->
    <string name="rvTeacherName">Tutor Name</string>
    <string name="decimalRatingTextView">4.7</string>

    <!--progress_dialog -->
    <string name="loading">Loading...</string>

    <!--rating_dialog -->
    <string name="submitted">Submitted</string>
    <string name="textView2">Thanks for your feedback.</string>

    <!--activity_student_edit_profile -->
    <string name="newPassword">New Password</string>
    <string name="ConfirmNewPassword">Confirm New Password</string>
    <string name="submitButton">Submit Changes</string>
    <string name="updateStudentProfile">"Your login credentials was successfully changed! You will be signed out now..."</string>


</resources>