<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:backgroundTint="#800080"
    tools:background="#800080"
    tools:context=".PrivacyPolicy">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15px">

            <TextView
                android:id="@+id/privacyPolicyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="11dp"
                android:text="@string/privacyPolicyTextView"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:textColor="#FFFFFF"
/>

            <TextView
                android:id="@+id/ppContentTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21px"
                android:lineSpacingExtra="8sp"
                android:padding="15dp"
                android:text="@string/ppContent"
                android:textSize="18sp"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/securityTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21px"
                android:paddingLeft="11dp"
                android:text="@string/security"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/securityContentTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21px"
                android:lineSpacingExtra="8sp"
                android:padding="15dp"
                android:text="@string/securityContent"
                android:textSize="18sp"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/changesToPPTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21px"
                android:paddingLeft="11dp"
                android:text="@string/changesToPP"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/changesToPPContentTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21px"
                android:lineSpacingExtra="8sp"
                android:padding="15dp"
                android:text="@string/changesToPPContent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/contactUsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21px"
                android:paddingLeft="11dp"
                android:text="@string/contactUs"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/contactUsContentTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21px"
                android:lineSpacingExtra="8sp"
                android:padding="15dp"
                android:text="@string/contactUsConten"
                android:textSize="18sp"
                android:textColor="#FFFFFF"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>