<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermsAndConditions"
    android:background="#ffffff"
    android:backgroundTint="#800080"
    tools:background="#800080">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15px">

            <TextView
                android:id="@+id/termsCondsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="11dp"
                android:text="@string/termsCondsTextView"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/termsCondsTVContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21px"
                android:lineSpacingExtra="8sp"
                android:padding="15dp"
                android:text="@string/termsCondsTVContent"
                android:textSize="18sp"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/termsChangesTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21px"
                android:paddingLeft="11dp"
                android:text="@string/termsChangesTV"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/termsChangesTVContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21px"
                android:lineSpacingExtra="8sp"
                android:padding="15dp"
                android:text="@string/termsChangesTVContent"
                android:textSize="18sp"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/contactUsTCTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21px"
                android:paddingLeft="11dp"
                android:text="@string/contactUsTCTV"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/contactUsTCTVContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21px"
                android:lineSpacingExtra="8sp"
                android:padding="15dp"
                android:text="@string/contactUsTCTVContent"
                android:textSize="18sp"
                android:textColor="#FFFFFF"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>