<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeacherFormActivity"
    android:background="#ffffff"
    android:backgroundTint="#0E9EAF"
    tools:background="#800080">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="57px"
            >

            <TextView
                android:id="@+id/formTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/formTextView"
                android:textColor="#800080"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/teacherNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60px"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="#800080"
                android:ems="10"

                android:hint="@string/teacherName"
                android:includeFontPadding="true"
                android:inputType="textPersonName"
                android:paddingLeft="11dp"
                android:paddingTop="6dp"
                android:paddingRight="6dp"
                android:paddingBottom="6dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="8pt"
                android:textStyle="normal|italic"
                tools:textColorHint="#ffffff" />

            <EditText
                android:id="@+id/teacherEmailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60px"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="#800080"
                android:ems="10"
                android:hint="@string/teacherEmail"

                android:includeFontPadding="true"
                android:inputType="textEmailAddress"
                android:paddingLeft="11dp"
                android:paddingTop="6dp"
                android:paddingRight="6dp"
                android:paddingBottom="6dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="8pt"
                android:textStyle="normal|italic"
                tools:textColorHint="#ffffff" />

            <EditText
                android:id="@+id/teacherAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60px"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="#800080"
                android:ems="10"
                android:hint="@string/teacherAge"
                android:includeFontPadding="true"
                android:inputType="number"

                android:maxLength="3"
                android:numeric="integer"
                android:paddingLeft="11dp"
                android:paddingTop="6dp"
                android:paddingRight="6dp"
                android:paddingBottom="6dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="8pt"
                android:textStyle="normal|italic"
                tools:textColorHint="#ffffff" />

            <EditText
                android:id="@+id/teacherAddressET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60px"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="#800080"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/teacherAddress"

                android:includeFontPadding="true"
                android:inputType="textMultiLine"
                android:paddingLeft="11dp"
                android:paddingTop="6dp"
                android:paddingRight="6dp"
                android:paddingBottom="6dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="8pt"
                android:textStyle="normal|italic"
                tools:textColorHint="#ffffff" />

            <EditText
                android:id="@+id/teacherSubjectsET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60px"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="#800080"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/teacherSubjects"

                android:includeFontPadding="true"
                android:inputType="textMultiLine"
                android:paddingLeft="11dp"
                android:paddingTop="6dp"
                android:paddingRight="6dp"
                android:paddingBottom="6dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="8pt"
                android:textStyle="normal|italic"
                tools:textColorHint="#ffffff" />

            <EditText
                android:id="@+id/teacherSalaryET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60px"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="#800080"
                android:ems="10"
                android:hint="@string/teacherSalary"
                android:includeFontPadding="true"

                android:inputType="number"
                android:numeric="decimal"
                android:paddingLeft="11dp"
                android:paddingTop="6dp"
                android:paddingRight="6dp"
                android:paddingBottom="6dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="8pt"
                android:textStyle="normal|italic"
                tools:textColorHint="#ffffff" />

            <EditText
                android:id="@+id/teacherExperienceET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60px"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="#800080"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/teacherExperience"

                android:includeFontPadding="true"
                android:inputType="textMultiLine"
                android:paddingLeft="11dp"
                android:paddingTop="6dp"
                android:paddingRight="6dp"
                android:paddingBottom="6dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="8pt"
                android:textStyle="normal|italic"
                tools:textColorHint="#ffffff" />

            <EditText
                android:id="@+id/teacherPhoneNumET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60px"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="#800080"
                android:ems="10"
                android:hint="@string/teacherPhoneNum"
                android:includeFontPadding="true"

                android:inputType="numberSigned"
                android:numeric="integer"
                android:paddingLeft="11dp"
                android:paddingTop="6dp"
                android:paddingRight="6dp"
                android:paddingBottom="6dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="8pt"
                android:textStyle="normal|italic"
                tools:textColorHint="#ffffff" />

            <TextView
                android:id="@+id/uploadImageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="31px"
                android:layout_marginBottom="28px"
                android:text="@string/uploadImageTextView"
                android:textColor="#800080"
                android:textSize="17sp"

                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/teacherPhotoImageView"
                android:layout_width="match_parent"
                android:layout_height="216dp"
                android:layout_marginBottom="17px"
                android:contentDescription="@string/teacherPhotoImageView"
                android:onClick="openGallery"
                android:textDirection="firstStrongRtl"
                app:srcCompat="@drawable/imageedit_1_7145354886" />

            <TextView
                android:id="@+id/chooseLocationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12px"
                android:text="@string/chooseLocationTextView"
                android:textColor="#800080"
                android:textSize="17sp"

                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/yourChosenLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21px"
                android:layout_marginTop="22px"
                android:layout_marginBottom="35px"
                android:text="@string/yourChosenLocation"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/goToMapButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_corners"
                android:fontFamily="sans-serif-black"
                android:onClick="goToMap"
                android:paddingLeft="6dp"

                android:paddingTop="6dp"
                android:paddingRight="6dp"
                android:paddingBottom="6dp"
                android:shadowColor="#FFFFFF"
                android:text="@string/goToMapButton"
                android:textColor="#ffffff"
                android:textSize="7pt"
                tools:shadowColor="#FFFFFF" />

            <Button
                android:id="@+id/submitTutorInfoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25px"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_corners"
                android:fontFamily="sans-serif-black"
                android:onClick="submitForm"

                android:padding="31px"
                android:shadowColor="#FFFFFF"

                android:text="@string/submitTutorInfoBtn"
                android:textColor="#ffffff"
                android:textSize="8pt"
                android:textStyle="normal"
                tools:shadowColor="#FFFFFF" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>